--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-    <servlet>
+    <!--servlet>
         <servlet-name>Connection</servlet-name>
         <servlet-class>Connection.Connection</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>NewCustomerInfo</servlet-name>
         <servlet-class>NewCustomerInfo.NewCustomerInfo</servlet-class>
-    </servlet>
+    </servlet-->
     <servlet>
         <servlet-name>DetailFill</servlet-name>
         <servlet-class>DetailFill.DetailFill</servlet-class>
+    </servlet>
+    <!--servlet>
+        <servlet-name>AdvanceBooking</servlet-name>
+        <servlet-class>AdvanceBooking.AdvanceBooking</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Connection</servlet-name>
@@ -19,11 +23,15 @@
     <servlet-mapping>
         <servlet-name>NewCustomerInfo</servlet-name>
         <url-pattern>/NewCustomerInfo</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping-->
     <servlet-mapping>
         <servlet-name>DetailFill</servlet-name>
         <url-pattern>/DetailFill</url-pattern>
     </servlet-mapping>
+    <!--servlet-mapping>
+        <servlet-name>AdvanceBooking</servlet-name>
+        <url-pattern>/AdvanceBooking</url-pattern>
+    </servlet-mapping-->
     <session-config>
         <session-timeout>
             30
