--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,6 +24,10 @@
         <servlet-name>NewCustomerInfo</servlet-name>
         <url-pattern>/NewCustomerInfo</url-pattern>
     </servlet-mapping-->
+    <servlet>
+        <servlet-name>Attendance</servlet-name>
+        <servlet-class>Attendance.Attendance</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>DetailFill</servlet-name>
         <url-pattern>/DetailFill</url-pattern>
@@ -32,6 +36,10 @@
         <servlet-name>AdvanceBooking</servlet-name>
         <url-pattern>/AdvanceBooking</url-pattern>
     </servlet-mapping-->
+    <servlet-mapping>
+        <servlet-name>Attendance</servlet-name>
+        <url-pattern>/Attendance</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
