--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -60,6 +60,10 @@
         <servlet-name>AdvanceND</servlet-name>
         <servlet-class>AdvanceND.AdvanceND</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Stove</servlet-name>
+        <servlet-class>Stove.Stove</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>DetailFill</servlet-name>
         <url-pattern>/DetailFill</url-pattern>
@@ -103,6 +107,10 @@
     <servlet-mapping>
         <servlet-name>AdvanceND</servlet-name>
         <url-pattern>/AdvanceND</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Stove</servlet-name>
+        <url-pattern>/Stove</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
